# retris

./: Cargo.toml  Cross.toml  README.md  build.sh  oxide
.github/: workflows.yml
.github/workflows/: workflows.yml
retris_0.5.2_armv7-3.2/control/: control
src/: canvas.rs  main.rs  swipe.rs
src/scene/: blank_scene.rs  game_scene.rs  main_menu_scene.rs  mod.rs
