[package]
name = "retris"
version = "0.6.3"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable = { git = "https://github.com/canselcik/libremarkable.git", ref = "e9ae2461" }
rand = "0.9"
tetris_core = "0.2"
downcast-rs = "1.2"
fxhash = "0.2"
clap = { version = "4.5", features = [ "derive" ] }
