[package]
name = "retris"
version = "0.6.4"
authors = ["Linus <linus@cosmos-ink.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable = { git = "https://github.com/canselcik/libremarkable.git", rev = "2e6157648984bfa31639648bd759ee2c31701024" } # Essentially 0.7.0
rand = "0.9"
tetris_core = "0.2"
downcast-rs = "2.0"
fxhash = "0.2"
clap = { version = "4.5", features = [ "derive" ] }
